  - Fix the documentation of TraceSchreierTreeForward and
    TraceSchreierTreeBack
  - Store OrbitGraph if it is computed afterwards
  - Make MappingPermListList_C and friends not change things into
    plain lists (keep ranges in particular)
  - PermLeftQuoTransformationNC now also accepts plain lists of
    integers instead of transformations
  - Some minor improvements to the documentation
 
==========================
 Changes from 3.6 -> 3.7:
==========================

  - Fix calling convention for ORB_EstimateOrbitSize
  - Fix the bug that orb!.gens could be immutable.
  - Improve OrbitBySuborbit to use random elements to find stabiliser els
  - New operation TestMembership for OrbitBySuborbits
  - Make all mutable objects properly mutable to allow for
    StructuralCopy.
  - New internal function TABLE_OF_KERNEL_TRANS.
  - Immutable AVLtrees can no longer be changed.
  - New internal function CanonicalTransSameKernel.
  - New internal function IsInjectiveTransOnList.
  - Fixed configure script for GAP 4.5


==========================
 Changes from 3.5 -> 3.6:
==========================

  - Fixed a bug in the AVL tree GAP code (C version was fine)


==========================
 Changes from 3.4 -> 3.5:
==========================

  - Weak orbits of semigroups and monoids in Orb
  - grading for an orbit
  - Jenkins Hash Function (as yet undocumented)
  - Slight improvement of hashfunc options
  - Documentation improvements
  - OrbitGraph for Orb orbits
  - IsGradedOrbit
  - New fast methods for AsList, Enumerator and ConstantTimeAccessList
  - Method for Iterator for Orb orbits
  - Kernel method for PermLeftQuoTransformationNC
  - Kernel method for MappingPermSetSet
  - Kernel method for MappingPermListList
  - Kernel method for ImageSetOfTransformation and KernelOfTransformation
  - Allow a different operation in FindSuborbits
  - Provide ORB_HashFunctionForPlainFlatList
  - Make ProfileGlobalFunctions(true) work for C functions